--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,26 +1,22 @@
 apply plugin: 'com.android.library'
 
-def DEFAULT_GOOGLE_PLAY_SERVICES_VERSION    = "+"
-
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    compileSdkVersion 26
+    buildToolsVersion '26.0.0'
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 22
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
     }
-
+    
     lintOptions {
         warning 'InvalidPackage' // prevent error: https://github.com/square/okio/issues/58
     }
 }
 
 dependencies {
-  def googlePlayServicesVersion = project.hasProperty('googlePlayServicesVersion') ? project.googlePlayServicesVersion : DEFAULT_GOOGLE_PLAY_SERVICES_VERSION
     compile 'com.facebook.react:react-native:+'
-    compile "com.google.android.gms:play-services-analytics:$googlePlayServicesVersion"
-
+    compile 'com.google.android.gms:play-services-analytics:11.0.0'
 }
